; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_z85230.c_z8530_write_port.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_z85230.c_z8530_write_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Z8530_PORT_SLEEP = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i32)* @z8530_write_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @z8530_write_port(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i64, i64* %3, align 8
  %7 = call i32 @Z8530_PORT_OF(i64 %6)
  %8 = call i32 @outb(i32 %5, i32 %7)
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* @Z8530_PORT_SLEEP, align 8
  %11 = and i64 %9, %10
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = call i32 @udelay(i32 5)
  br label %15

15:                                               ; preds = %13, %2
  ret void
}

declare dso_local i32 @outb(i32, i32) #1

declare dso_local i32 @Z8530_PORT_OF(i64) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
